regression/fail/modules.7.sml
signature S =
   sig
      type 'a t
      type u
      sharing type t = u
   end
